<resources>
    <string name="app_name">Dealer</string>
    <string name="empty_string" />
    <string name="welcome_to_genetic_world">Welcome to\nGenetic World !!</string>
    <string name="enter_mobile">Please enter your registered phone number, you will received an OTP.</string>
    <string name="mobile_empty_error">Please enter mobile number</string>
    <string name="enter_mobile_only">Please enter mobile number only</string>
    <string name="enter_mobile_number_complete">Please enter 10 digit mobile number</string>
    <string name="otp_empty_error">Please enter OTP</string>
    <string name="otp_incomplete_error">Please enter complete OTP</string>
    <string name="device_type">android</string>
    <string name="phone">phone</string>
    <string name="otp">otp</string>
    <string name="otpBundle">otpBundle</string>
    <string name="loading">Loading</string>
    <string name="otp_verification_title">OTP Verification</string>
    <string name="otp_description">OTP has been sent to your registered mobile number xx xxxxx x%s.\nPlease enter OTP below</string>
    <string name="enter_your_number">ENTER YOUR NUMBER</string>
    <string name="str_submit">SUBMIT</string>
    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_more">More</string>
    <string name="str_recent_order">Recent Order</string>
    <string name="str_more_plus">More+</string>
    <string name="order_number">Order #%s</string>
    <string name="sales_man_s">Sales Man: %s</string>
    <string name="str_type">Type: %s</string>
    <string name="str_payment_history">Payment History</string>
    <string name="str_payment_due">Payment Due</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="amount_s">₹ %s</string>
    <string name="discount_s">₹ %s</string>
    <string name="product_screen">Product</string>
    <string name="cart">Cart</string>
    <string name="remove_from_cart">Are you sure you want to remove %s from your cart?</string>
    <string name="subtotal_s">Subtotal %s</string>
    <string name="lr_uploaded_s">LR Uploaded: %s</string>

</resources>