<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/common_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_layout"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_11sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recent_order_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.68"
                    android:background="@drawable/ic_head_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/recent_order_head"
                    android:padding="@dimen/_3sdp"
                    android:paddingStart="@dimen/_7sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/ic_order"
                        android:contentDescription="@null"
                        android:id="@+id/img"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_recent_order"
                        style="@style/head_textview_style"
                        android:includeFontPadding="false"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="@dimen/_8sdp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_more_plus"
                    android:id="@+id/txt_more_plus_recent_order"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="@+id/recent_order_head"
                    app:layout_constraintBottom_toBottomOf="@+id/recent_order_head"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:textColor="@color/more_plus_color"/>

                <include
                    android:id="@+id/round_img_layout"
                    layout="@layout/rounded_corner_imageview"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintWidth_percent="0.22"
                    app:layout_constraintDimensionRatio="1:1"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    app:layout_constraintTop_toBottomOf="@+id/recent_order_head"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/recent_order_number"
                    android:textColor="@color/dashboard_color_order_text"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/order_number"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintStart_toEndOf="@+id/round_img_layout"
                    app:layout_constraintTop_toTopOf="@+id/round_img_layout"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sales_man_name"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/sales_man_s"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:layout_constraintStart_toStartOf="@+id/recent_order_number"
                    app:layout_constraintTop_toBottomOf="@+id/recent_order_number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/type"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/str_type"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:layout_constraintStart_toStartOf="@+id/sales_man_name"
                    app:layout_constraintTop_toBottomOf="@+id/sales_man_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/amount"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="Rs. 100.00"
                    android:textSize="@dimen/_13ssp"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:layout_constraintStart_toStartOf="@+id/type"
                    app:layout_constraintTop_toBottomOf="@+id/type"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Detail"
                    android:textAllCaps="false"
                    android:fontFamily="@font/montserrat_medium"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/amount"
                    app:layout_constraintBottom_toBottomOf="@+id/amount"
                    android:background="@drawable/ic_rectangle_2"
                    android:gravity="center"
                    android:id="@+id/txt_view_detail"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_7sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:adjustViewBounds="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    app:layout_constraintTop_toTopOf="@+id/recent_order_number"
                    app:layout_constraintTop_toBottomOf="@+id/recent_order_number"
                    android:src="@drawable/ic_more_gray"
                    android:scaleType="fitXY"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/payment_history_layout"
                app:layout_constraintTop_toBottomOf="@+id/recent_order_layout"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.68"
                    android:background="@drawable/ic_head_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/payment_history_head"
                    android:padding="@dimen/_3sdp"
                    android:paddingStart="@dimen/_7sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/ic_online_payment"
                        android:paddingTop="@dimen/_5sdp"
                        android:contentDescription="@null"
                        android:id="@+id/payment_img"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_payment_history"
                        style="@style/head_textview_style"
                        android:includeFontPadding="false"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/payment_img"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="@dimen/_8sdp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_more_plus"
                    android:id="@+id/txt_more_plus_payment_history"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="@+id/payment_history_head"
                    app:layout_constraintBottom_toBottomOf="@+id/payment_history_head"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:textColor="@color/more_plus_color"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/payment_history_head"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/payment_history_dashboard_layout_1"
                        layout="@layout/payment_history_dashboard_layout"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@android:color/darker_gray"/>

                    <include
                        android:id="@+id/payment_history_dashboard_layout_2"
                        layout="@layout/payment_history_dashboard_layout"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/payment_due_layout"
                app:layout_constraintTop_toBottomOf="@+id/payment_history_layout"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.68"
                    android:background="@drawable/ic_head_background"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/payment_due_head"
                    android:padding="@dimen/_3sdp"
                    android:paddingStart="@dimen/_7sdp">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/ic_online_payment"
                        android:paddingTop="@dimen/_5sdp"
                        android:contentDescription="@null"
                        android:id="@+id/payment_due_img"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_payment_history"
                        style="@style/head_textview_style"
                        android:includeFontPadding="false"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/payment_due_img"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="@dimen/_8sdp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_more_plus"
                    android:id="@+id/txt_more_plus_payment_due_history"
                    android:textSize="@dimen/_14ssp"
                    android:fontFamily="@font/montserrat_regular"
                    android:includeFontPadding="false"
                    app:layout_constraintTop_toTopOf="@+id/payment_due_head"
                    app:layout_constraintBottom_toBottomOf="@+id/payment_due_head"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:textColor="@color/more_plus_color"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/payment_due_head"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/payment_due_dashboard_layout_1"
                        layout="@layout/payment_due_dashboard_layout"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:background="@android:color/darker_gray"/>

                    <include
                        android:id="@+id/payment_due_dashboard_layout_2"
                        layout="@layout/payment_due_dashboard_layout"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>